--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ img {
     z-index: 999;
     background-color: #ffffff;
     width: 100%;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-main-div {
@@ -104,6 +105,7 @@ img {
     line-height: 24px;
     color: #434455;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 24px 0;
 }
 
@@ -137,6 +139,11 @@ img {
     gap: 40px;
 }
 
+.nav-ul .first-li a{
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf;
+}
+
 /* хувер навігації */
 
 .nav-href::after {
@@ -145,7 +152,7 @@ img {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     background-color: #404BBF;
     opacity: 0;
