--- a/css/styles.css
+++ b/css/styles.css
@@ -168,12 +168,13 @@ img {
 .section-one {
     background-color: #2e2f42;
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), 
-    rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    max-width: 1440px;
 }
 
 .section-one-main-text {
@@ -203,7 +204,7 @@ img {
     border-radius: 4px;
     display: block;
     margin: auto;
-    transition-duration: 0.4s;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover, button:focus {
@@ -277,6 +278,7 @@ img {
     background-color: #FFFFFF;
     flex-basis: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px;
+    padding: 0 0;
 }
 
 .section-three-li-div {
@@ -303,6 +305,7 @@ img {
     display: flex;
     gap: 24px;
     margin-top: 8px;
+    justify-content: center;
 }
 
 .social-team-li a {
@@ -313,17 +316,18 @@ img {
     height: 40px;
     border-radius: 50%;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-team-li svg {
-    fill: #fff;
+    fill: #f4f4fd;
 }
 
-.social-team-li a:hover {
-    background-color: #ffffff;
+.social-team-li a:hover, .adress-href:focus {
+    background-color: #404bbf;
 }
 
-.social-team-li svg:hover {
+.social-team-li a:hover, a:focus svg {
     fill: #4D5AE5;
 }
 
