--- a/css/styles.css
+++ b/css/styles.css
@@ -346,6 +346,11 @@ img {
 
 .section-four-li {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section-four-li:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-four-li-div {
@@ -377,11 +382,41 @@ img {
     letter-spacing: 0.02em;
 }
 
+.section-four-img_div {
+    position: relative;
+    overflow: hidden;
+}
+
+.section-four-img_div .p-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+}
+
+.section-four-img_div:hover .p-text {
+    transform: translateY(0%);
+}
+
 /* футер */
 
 .footer {
     background-color: #2e2f42;
     padding: 100px 0;
+}
+
+.footer-main-div {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
 }
 
 .footer-logo {
@@ -405,4 +440,41 @@ img {
     letter-spacing: 0.02em;
     color: #F4F4FD;
     max-width: 264px;
+}
+
+.footer-social-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+
+.social-icon {
+    display: flex;
+    gap: 16px;
+}
+
+.social-icon-li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon-li svg {
+    fill: #f4f4fd;
+}
+
+.social-icon-li a:hover, .adress-href:focus {
+    background-color: #31d0aa;
+}
+
+.social-icon-li a:hover, a:focus svg {
+    fill: #4D5AE5;
 }
