--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,10 @@ img {
     display: block;
 }
 
+.studio {
+    color: #404BBF;
+}
+
 .nav-logo-span {
     color: #2e2f42;
 }
@@ -112,13 +116,14 @@ img {
 .nav-href {
     font-weight: 500;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    color: #404bbf;
     padding: 24px 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 24px;
     display: block;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-href:hover, .nav-href:focus {
@@ -137,11 +142,6 @@ img {
 .address-ul {
     display: flex;
     gap: 40px;
-}
-
-.nav-ul .first-li a{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf;
 }
 
 /* хувер навігації */
@@ -166,6 +166,7 @@ img {
 /* секція 1 */
 
 .section-one {
+    width: 100%;
     background-color: #2e2f42;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
@@ -327,11 +328,6 @@ img {
 .social-team-li a:hover, .a:focus {
     background-color: #404bbf;
 }
-
-.social-team-li a:hover, a:focus svg {
-    fill: #4D5AE5;
-}
-
 /* секція 4 */
 
 .section-four {
